# gesture-controlled-dobot-arm

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.8
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.8
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.8  libmoveit_butterworth_filter.so.2.5.8  libmoveit_collision_detection.so.2.5.8  libmoveit_collision_detection_bullet.so.2.5.8  libmoveit_collision_detection_fcl.so.2.5.8  libmoveit_collision_distance_field.so.2.5.8  libmoveit_constraint_samplers.so.2.5.8  libmoveit_distance_field.so.2.5.8  libmoveit_dynamics_solver.so.2.5.8  libmoveit_exceptions.so.2.5.8  libmoveit_kinematic_constraints.so.2.5.8  libmoveit_kinematics_metrics.so.2.5.8  libmoveit_planning_interface.so.2.5.8  libmoveit_planning_request_adapter.so.2.5.8  libmoveit_planning_scene.so.2.5.8  libmoveit_robot_model.so.2.5.8  libmoveit_robot_state.so.2.5.8  libmoveit_robot_trajectory.so.2.5.8  libmoveit_test_utils.so.2.5.8  libmoveit_trajectory_processing.so.2.5.8  libmoveit_transforms.so.2.5.8  libmoveit_utils.so.2.5.8
log/: latest_build
src/four_dof_arm/: CMakeLists.txt
src/four_dof_arm/config/: rviz_config.rviz
src/four_dof_arm/launch/: robot_launch.py
src/four_dof_arm/param/: robot_params.yaml
src/four_dof_arm/scripts/: arm_angle_publisher.py  arm_controller.py  sensor_interface.py
src/four_dof_arm/urdf/: robot.urdf
src/gesture_control_pkg/: setup.py
(+1992 files in other folders)
